[project]
requires-python = ">=3.12"

[tool.black]
line-length = 98

[tool.ruff]
line-length = 98
indent-width = 4
exclude = ["E231", "E202"]
src = ["abk_bwp"]

[tool.ruff.lint]
preview = true
select = ["D", "F401", "E302"]  # Enable specific Flake8-compatible rules

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
